<?xml version="1.0"?>
<package>
  <name>teraranger_array_converter</name>
  <version>1.0.0</version>
  <description>Package that handle conversion from RangeArray messsages</description>

  <maintainer email="pierre-louis.kabaradjian@terabee.com">Pierre-Louis Kabaradjian</maintainer>

  <license>TODO</license>

  <url type="website">http://wiki.ros.org/teraranger_array_converter</url>

  <author email="pierre-louis.kabaradjian@terabee.com">Pierre-Louis Kabaradjian</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
